--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,6 +12,26 @@
 	<div layout:fragment="content">
 		<h1>File 2 PNG 2 File</h1>
 
+		<h2>Directorio</h2>
+		<table border="1">
+			<tr>
+				<td>Id</td>
+				<td>Ruta</td>
+				<td>KB</td>
+				<td>Action</td>
+			</tr>
+			<tr th:each="file : ${files}">
+				<td th:text="${file.Id}"></td>
+				<td th:text="${file?.file.getAbsolutePath()}"></td>
+				<td th:text="${file.getKb()}"></td>
+				<td><a th:href="@{/fichero/split/{id}(id=${file.Id})}">Split</a>
+					/ <a th:href="@{/fichero/unsplit/{id}(id=${file.Id})}">UnSplit</a>
+					/ <a th:href="@{/fichero/splitAndStore/{id}(id=${file.Id})}">SplitAndStore</a>
+					
+				</td>
+			</tr>
+		</table>
+
 		<H2>Ficheros</H2>
 		<table border="1">
 			<tr>
@@ -19,8 +39,9 @@
 				<td>Nombre</td>
 				<td>Ext.</td>
 				<td>Tamano</td>
-				<td>Partes</td>
 				<td>Fecha</td>
+				<td>Partes</td>
+				<td>Subido</td>
 				<td>Action</td>
 			</tr>
 			<tr th:each="fichero : ${ficheros}">
@@ -28,54 +49,49 @@
 				<td th:text="${fichero?.nombre}">name</td>
 				<td th:text="${fichero?.extension}">extension</td>
 				<td th:text="${fichero?.bytes}">bytes</td>
-				<td></td>
-				<!-- <td th:text="${fichero?.fechaCreacion}">fechaCreacion</td> -->
+
+				<td
+					th:text="${#dates.format(fichero?.fechaCreacion,'dd/MM/yyyy HH:mm')}">fechaCreacion</td>
 				<td th:text="${fichero?.partes}">Partes</td>
+				<td th:text="${fichero?.uploaded}">Partes</td>
 				<td><a th:href="@{/fichero/delete/{id}(id=${fichero.Id})}">Delete</a>
+				/<a th:href="@{/fichero/upload/{id}(id=${fichero.Id})}">Upload</a>
 					/ <a th:href="@{/fichero/download/{id}(id=${fichero.Id})}">Download</a>
 				</td>
 			</tr>
 		</table>
 
 
-		<h1>Formulario</h1>
-		<form action="#" th:action="@{/fichero/add}" th:object="${fichero}"
-			method="post" enctype="multipart/form-data">
+		<h1>Formularios</h1>
+
+		<form action="#" th:action="@{/action}" method="post">
 
 			<p>
-				Nombre: <input type="file" th:field="*{ruta}" />
+				<input type="submit" value="Convertir fichero en png" />
 			</p>
+		</form>
+
+
+		<form action="#" th:action="@{/convert}" method="post">
+
 			<p>
-				<input type="submit" value="Submit" /> <input type="reset"
-					value="Reset" />
-			<form action="#" th:action="@{/action}" method="post">
+				<input type="submit" value="Convert image to file" />
+			</p>
+		</form>
 
-				<p>
-					<input type="submit" value="Convertir fichero en png" />
-				</p>
-			</form>
+		<form action="#" th:action="@{/upload}" method="post">
 
+			<p>
+				<input type="submit" value="Upload File" />
+			</p>
+		</form>
 
-			<form action="#" th:action="@{/convert}" method="post">
+		<form action="#" th:action="@{/download}" method="post">
 
-				<p>
-					<input type="submit" value="Convert image to file" />
-				</p>
-			</form>
-
-			<form action="#" th:action="@{/upload}" method="post">
-
-				<p>
-					<input type="submit" value="Upload File" />
-				</p>
-			</form>
-
-			<form action="#" th:action="@{/download}" method="post">
-
-				<p>
-					<input type="submit" value="Download File" />
-				</p>
-			</form>
+			<p>
+				<input type="submit" value="Download File" />
+			</p>
+		</form>
 	</div>
 
 </body>
