--- a/src/main/resources/templates/fragments/fragment_tables.html
+++ b/src/main/resources/templates/fragments/fragment_tables.html
@@ -24,6 +24,7 @@
             <td><a th:href="@{/fichero/split/{id}(id=${file.Id})}">Split</a>
                 / <a th:href="@{/fichero/unsplit/{id}(id=${file.Id})}">UnSplit</a>
                 / <a th:href="@{/fichero/splitAndStore/{id}(id=${file.Id})}">SplitAndStore</a>
+                / <a th:href="@{/fichero/compare}">Compare</a>
 
             </td>
         </tr>
