Descargas con hilos

--- a/src/main/resources/templates/fragments/fragment_tables.html
+++ b/src/main/resources/templates/fragments/fragment_tables.html
@@ -63,6 +63,7 @@
                 / <a th:href="@{/fichero/delete/{id}(id=${fichero.Id})}">Delete</a>
                 /<a th:href="@{/fichero/upload/{id}(id=${fichero.Id})}">Upload</a>
                 / <a th:href="@{/fichero/download/{id}(id=${fichero.Id})}">Download</a>
+                / <a th:href="@{/fichero/downloadThread/{id}(id=${fichero.Id})}">Download mAx</a>
             </td>
         </tr>
         </tbody>
