--- a/InifinitySpace-mvc/src/main/resources/templates/fragments/banners.html
+++ b/InifinitySpace-mvc/src/main/resources/templates/fragments/banners.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <body>
 <div th:fragment="navBarAdmin">
     <p>Barra de Admin</p>
@@ -30,7 +31,7 @@
                         aria-expanded="false"> Peliculas </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="companies">Ver todas</a> <a
-                            class="dropdown-item" href="companies/add">Añadir Pelicula</a>
+                            class="dropdown-item" href="pelicula/create">Añadir Pelicula</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Experar</a>
                     </div>
@@ -55,7 +56,7 @@
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search"
-                    placeholder="Buscar..." aria-label="Search">
+                       placeholder="Buscar..." aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
             </form>
         </div>
