--- a/InifinitySpace-mvc/src/main/resources/templates/layout/simple-layout.html
+++ b/InifinitySpace-mvc/src/main/resources/templates/layout/simple-layout.html
@@ -1,36 +1,37 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-<!--/*  Each token will be replaced by their respective titles in the resulting page. */-->
-<title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">LaBellaProv</title>
-<link th:href="@{~/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css}"
-	rel="stylesheet">
-<link th:href="@{~/webjars/font-awesome/5.13.0/css/fontawesome.min.css}"
-	rel="stylesheet">
-<link th:href="@{css/main.css}" rel="stylesheet">
+    <!--/*  Each token will be replaced by their respective titles in the resulting page. */-->
+    <title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">InfiniteSpace</title>
+    <link th:href="@{~/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css}"
+          rel="stylesheet">
+    <link th:href="@{~/webjars/font-awesome/5.13.0/css/fontawesome.min.css}"
+          rel="stylesheet">
+    <link th:href="@{css/main.css}" rel="stylesheet">
 </head>
 <body>
-	<!--/* Standard layout can be mixed with Layout Dialect */-->
-	<div th:insert="fragments/banners:: navBarUser">...</div>
-	<div class="container">
-		<div layout:fragment="content">
-			<!-- ============================================================================ -->
-			<!-- This content is only used for static prototyping purposes (natural templates)-->
-			<!-- and is therefore entirely optional, as this markup fragment will be included -->
-			<!-- from "fragments/header.html" at runtime.                                     -->
-			<!-- ============================================================================ -->
-			<h1>Static content for prototyping purposes only</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-				Praesent scelerisque neque neque, ac elementum quam dignissim
-				interdum. Phasellus et placerat elit. Lorem ipsum dolor sit amet,
-				consectetur adipiscing elit. Praesent scelerisque neque neque, ac
-				elementum quam dignissim interdum. Phasellus et placerat elit.</p>
-		</div>
-		<!--  <div th:replace="fragments/footer :: footer">&copy; 2014 The Static Templates</div> -->
-	</div>
-	<script th:src="@{~/webjars/jquery/1.9.1/jquery.min.js}"></script>
-	<script th:src="@{~/webjars/bootstrap/4.0.0-2/js/bootstrap.min.js}"></script>
-	<script th:src="@{~/webjars/font-awesome/5.13.0/js/all.min.js}"></script>
+<!--/* Standard layout can be mixed with Layout Dialect */-->
+<div th:insert="fragments/banners:: navBarUser"></div>
+<div class="container">
+    <div layout:fragment="content">
+        <!-- ============================================================================ -->
+        <!-- This content is only used for static prototyping purposes (natural templates)-->
+        <!-- and is therefore entirely optional, as this markup fragment will be included -->
+        <!-- from "fragments/header.html" at runtime.                                     -->
+        <!-- ============================================================================ -->
+        <h1>Static content for prototyping purposes only</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Praesent scelerisque neque neque, ac elementum quam dignissim
+            interdum. Phasellus et placerat elit. Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit. Praesent scelerisque neque neque, ac
+            elementum quam dignissim interdum. Phasellus et placerat elit.</p>
+    </div>
+    <!--  <div th:replace="fragments/footer :: footer">&copy; 2014 The Static Templates</div> -->
+</div>
+<script th:src="@{~/webjars/jquery/1.9.1/jquery.min.js}"></script>
+<script th:src="@{~/webjars/bootstrap/4.0.0-2/js/bootstrap.min.js}"></script>
+<script th:src="@{~/webjars/font-awesome/5.13.0/js/all.min.js}"></script>
 </body>
 </html>
