--- a/InifinitySpace-mvc/src/main/resources/templates/peliculas.html
+++ b/InifinitySpace-mvc/src/main/resources/templates/peliculas.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 <div  layout:fragment="content">
-    Listado de peliculas
+
+    <div th:insert="fragments/fragment_tables.html :: tabla_peliculas"></div>
+</div>
 </body>
 </html>
