--- a/InifinitySpace-mvc/src/main/resources/templates/fragments/banners.html
+++ b/InifinitySpace-mvc/src/main/resources/templates/fragments/banners.html
@@ -21,7 +21,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active"><a class="nav-link" href="#">Inicio
+                <li class="nav-item active"><a class="nav-link" href="#" th:href="@{/}">Inicio
                     <span class="sr-only">(current)</span>
                 </a></li>
 
@@ -30,8 +30,8 @@
                         role="button" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false"> Peliculas </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="companies">Ver todas</a> <a
-                            class="dropdown-item" href="pelicula/create">Añadir Pelicula</a>
+                        <a class="dropdown-item" th:href="@{/pelicula}">Ver todas</a>
+                        <a class="dropdown-item" th:href="@{pelicula/create}">Añadir Pelicula</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Experar</a>
                     </div>
