--- a/InifinitySpace-mvc/src/main/resources/templates/fragments/fragment_tables.html
+++ b/InifinitySpace-mvc/src/main/resources/templates/fragments/fragment_tables.html
@@ -8,7 +8,7 @@
 <div th:fragment="tabla_directorio">
     <h2>Tabla de directorio</h2>
     <table class="table table-striped">
-        <thead>
+        <thead class="thead-dark">
         <tr>
             <th scope="row">Id</th>
             <th scope="row">Ruta</th>
@@ -21,10 +21,9 @@
             <td th:text="${file.Id}"></td>
             <td th:text="${file?.file.getAbsolutePath()}"></td>
             <td th:text="${file.getKb()}"></td>
-            <td><a th:href="@{/fichero/split/{id}(id=${file.Id})}">Split</a>
-                / <a th:href="@{/fichero/unsplit/{id}(id=${file.Id})}">UnSplit</a>
-                / <a th:href="@{/fichero/splitAndStore/{id}(id=${file.Id})}">SplitAndStore</a>
-                / <a th:href="@{/fichero/compare}">Compare</a>
+            <td>
+                 <a th:href="@{/fichero/splitAndStore/{id}(id=${file.Id})}">SplitAndStore</a>
+                / <a th:href="@{/fichero/splitAndStoreMAX/{id}(id=${file.Id})}">UploadMAX</a>
 
             </td>
         </tr>
@@ -35,7 +34,7 @@
 <div th:fragment="tabla_ficheros">
     <H2>Ficheros</H2>
     <table class="table table-striped">
-        <thead>
+        <thead class="thead-dark">
         <tr>
             <th scope="row">Id</th>
             <th scope="row">Nombre</th>
@@ -73,7 +72,7 @@
 <div th:fragment="tabla_map_entry">
     <H2>Ficheros</H2>
     <table class="table table-striped">
-        <thead>
+        <thead class="thead-dark">
         <tr>
             <th scope="row">Id</th>
             <th scope="row">Parte</th>
@@ -90,6 +89,32 @@
             <td th:text="${parte?.url}">url</td>
 
 
+        </tr>
+        </tbody>
+    </table>
+</div>
+
+
+<div th:fragment="tabla_peliculas">
+    <h2>Tabla de Peliculas</h2>
+    <table class="table table-striped">
+        <thead class="thead-dark">
+        <tr>
+            <th scope="row">Id</th>
+            <th scope="row">Nombre</th>
+            <th scope="row">Fichero</th>
+            <th scope="row">Action</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="pelicula : ${peliculas}">
+            <td th:text="${pelicula.Id}"></td>
+            <td th:text="${pelicula.nombre}"></td>
+            <td th:text="${pelicula?.fichero?.Id}"></td>
+            <td><a th:href="@{/pelicula/delete/{id}(id=${pelicula.Id})}">Delete</a>
+
+
+            </td>
         </tr>
         </tbody>
     </table>
