Creado sistema de ficheros, test de creación de episodios con expresiones regulares 00x00 000 para asignar el numero de episodio automaticamente.

--- a/InifinitySpace-mvc/src/main/resources/templates/fragments/banners.html
+++ b/InifinitySpace-mvc/src/main/resources/templates/fragments/banners.html
@@ -50,6 +50,18 @@
                     </div>
                 </li>
 
+                <li class="nav-item dropdown"><a
+                        class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+                        role="button" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false"> Episodios </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" th:href="@{/episodio}">Ver todos</a> <a
+                            class="dropdown-item" th:href="@{/episodio/create}">Añadir episodio</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Experar</a>
+                    </div>
+                </li>
+
 
                 <li class="nav-item"><a class="nav-link disabled" href="#"
                                         tabindex="-1" aria-disabled="true">Disabled</a></li>
