--- a/InifinitySpace-mvc/src/main/resources/templates/index.html
+++ b/InifinitySpace-mvc/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
     <link th:href="@{/webjars/font-awesome/5.13.0/css/fontawesome.min.css}"
           rel="stylesheet">
     <!-- <link th:href="@{css/main.css}" rel="stylesheet"> -->
-
+    <link th:href="@{/css/main.css}" rel="stylesheet">
 </head>
 <body>
 <div th:insert="fragments/banners.html :: navBarUser"></div>
