--- a/InifinitySpace-mvc/src/main/resources/templates/layout/simple-layout.html
+++ b/InifinitySpace-mvc/src/main/resources/templates/layout/simple-layout.html
@@ -9,7 +9,7 @@
           rel="stylesheet">
     <link th:href="@{~/webjars/font-awesome/5.13.0/css/fontawesome.min.css}"
           rel="stylesheet">
-    <link th:href="@{css/main.css}" rel="stylesheet">
+    <link th:href="@{/css/main.css}" rel="stylesheet">
 </head>
 <body>
 <!--/* Standard layout can be mixed with Layout Dialect */-->
