Preparando snapshot No parte ficheros de más de 2GB, hay que buscar una solucion alternativa.

--- a/InifinitySpace-mvc/src/main/resources/templates/form/addPelicula.html
+++ b/InifinitySpace-mvc/src/main/resources/templates/form/addPelicula.html
@@ -8,23 +8,27 @@
     <title>Crear pelicula</title>
 </head>
 <body>
-<div  layout:fragment="content">
+<div layout:fragment="content">
     Formulario para crear peliculas
 
-    <form th:object="${pelicula}" method="POST"  th:action="@{/pelicula/add}">
+    <form th:object="${peliculaForm}" method="POST" th:action="@{/pelicula/add}">
         <div class="form-group">
             <label for="inputNombre">Nombre de la pelicula</label>
-            <input type="text" class="form-control" id="inputNombre" aria-describedby="emailHelp" th:field="*{nombre}">
+            <input type="text" class="form-control" id="inputNombre" aria-describedby="emailHelp"
+                   th:field="*{pelicula.nombre}">
             <small id="emailHelp" class="form-text text-muted">Introduce el nombre de la pelicula</small>
         </div>
 
-        <select class="custom-select" th:field="*{fichero}">
-            <option th:value="${null}" selected>Elige un fichero que no esta asociado</option>
-            <option th:each="fichero : ${ficheros}" th:value="${fichero.id}" th:utext="${fichero.nombre}"></option>
-        </select>
+        <!--  <select class="custom-select" th:field="*{fichero}">
+              <option th:value="${null}" selected>Elige un fichero que no esta asociado</option>
+              <option th:each="fichero : ${ficheros}" th:value="${fichero.id}" th:utext="${fichero.nombre}"></option>
+          </select>-->
+        <div th:insert="fragments/fragment_tables_form.html :: tabla_directorio_form"></div>
         <br/>
         <button type="submit" class="btn btn-primary">Crear</button>
     </form>
+
+
 </div>
 </body>
 </html>
